[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = "First FastAPI"
authors = ["Johnathan Rocha <johnathanrocha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
